# GPT1-backend

./: pyproject.toml  requirements.txt  vercel.json
gpt1_backend/: main.py
